Religion Well-being

--- a/manuscripts/24-inkuk-pol-env/24-inkuk-pol-env-long.qmd
+++ b/manuscripts/24-inkuk-pol-env/24-inkuk-pol-env-long.qmd
@@ -460,7 +460,7 @@ $$
 
 ### Potential Outcomes
 
-For any intervention where we set the subjects political orientation to level $\tilde{a}$:
+For any intervention where we set the subjects political orientation to level $AGtilde{a}$:
 
 >  $E[Y(\tilde{a})]$ denotes the potential outcome in an environmental orientation when the population is intervened upon.
 
