--- a/manuscripts/24-jb-church-wb-LONG/24-church-wb-long.tex
+++ b/manuscripts/24-jb-church-wb-LONG/24-church-wb-long.tex
@@ -191,8 +191,8 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={National Longitudinal Data Reveal Causal Effects of Religious Service Attendance on Meaning and Purpose, Gratitude, and Sexual Satisfaction (but not much else)},
-  pdfauthor={Joseph A. Bulbulia; Chris G. Sibley; Don E Davis; Kenneth G. Rice; Geoffrey Troughton; Daryl Van Tongeren},
+  pdftitle={Religious Service Attendance Increases Meaning, Gratitude, and Sexual Satisfaction (But Not Much Else) in Secular New Zealand.},
+  pdfauthor={Joseph A. Bulbulia; Don E Davis; Cyrstal Park; Kenneth G. Rice; Geoffrey Troughton; Daryl Van Tongeren; Chris G. Sibley},
   pdfkeywords={Use, use},
   colorlinks=true,
   linkcolor={blue},
@@ -202,9 +202,8 @@
   pdfcreator={LaTeX via pandoc}}
 
 
-\title{National Longitudinal Data Reveal Causal Effects of Religious
-Service Attendance on Meaning and Purpose, Gratitude, and Sexual
-Satisfaction (but not much else)}
+\title{Religious Service Attendance Increases Meaning, Gratitude, and
+Sexual Satisfaction (But Not Much Else) in Secular New Zealand.}
 
 \usepackage{academicons}
 \usepackage{xcolor}
@@ -217,19 +216,20 @@ Satisfaction (but not much else)}
       \usepackage{academicons}
 \usepackage{xcolor}
 
-  \author{Chris G. Sibley}
-            \affil{%
-             \small{     School of Psychology, University of Auckland
-          ORCID \textcolor[HTML]{A6CE39}{\aiOrcid} ~0000-0002-4064-8800 }
-              }
-      \usepackage{academicons}
-\usepackage{xcolor}
-
   \author{Don E Davis}
             \affil{%
              \small{     Georgia State University, Matheny Center for
 the Study of Stress, Trauma, and Resilience
           ORCID \textcolor[HTML]{A6CE39}{\aiOrcid} ~0000-0003-3169-6576 }
+              }
+      \usepackage{academicons}
+\usepackage{xcolor}
+
+  \author{Cyrstal Park}
+            \affil{%
+             \small{     Univeristy of Conneticut, Department of
+Psychological Sciences
+          ORCID \textcolor[HTML]{A6CE39}{\aiOrcid} ~0000-0001-6572-7321 }
               }
       \usepackage{academicons}
 \usepackage{xcolor}
@@ -257,26 +257,142 @@ University of Wellington
              \small{     Hope College
           ORCID \textcolor[HTML]{A6CE39}{\aiOrcid} ~0000-0002-1810-9448 }
               }
+      \usepackage{academicons}
+\usepackage{xcolor}
+
+  \author{Chris G. Sibley}
+            \affil{%
+             \small{     School of Psychology, University of Auckland
+          ORCID \textcolor[HTML]{A6CE39}{\aiOrcid} ~0000-0002-4064-8800 }
+              }
       
 
 
-\date{2024-12-10}
+\date{2024-12-21}
 \begin{document}
 \maketitle
 \begin{abstract}
-We investigate the causal effects of religious service attendance on
-multi-dimensional well-being using longitudinal data from a nationally
-representative cohort of 46,377'' New Zealanders collected between 2018
-and 2023.
-
-\textbf{KEYWORDS}: \emph{Causal Inference}; \emph{Charity};
-\emph{Church}; \emph{Cross-validation}; \emph{Distress}; \emph{Health};
+We use nationally representative longitudinal data from 46,377 New
+Zealanders (2018--2023) to estimate the causal effects of religious
+service attendance on multiple dimensions of well-being. We compare two
+hypothetical four-year scenarios: (a) everyone attends services at least
+four times per month, and (b) no one attends. We adjust for baseline
+covariates measured before these interventions, including baseline
+service attendance and baseline measurements of multi-dimensional
+well-being. We also adjust for time-varying counfounders such as
+employment, disability, relationships, and parenting. We assess outcomes
+in the year following these sequential treatment regimes. Using
+cross-validation and doubly robust machine-learning estimators, along
+with inverse probability-of-censoring weights, we find that regular
+attendance increases a sense of meaning and purpose, enhances gratitude,
+and, somewhat unexpectedly, improves sexual satisfaction. Effects on
+mental health are modest, while effects on biological health and social
+well-being are negligible or small. In a largely secular population,
+attending religious services regularly boosts purpose, nurtures
+gratitude, and raises sexual satisfaction, yet yields few other clear
+benefits. \textbf{KEYWORDS}: \emph{Causal Inference}; \emph{Church};
+\emph{Cross-validation}; \emph{Distress}; \emph{Health};
 \emph{Longitudinal}; \emph{Machine Learning}; \emph{Religion};
-\emph{Semi-parametric}; \emph{Targeted Learning}; \emph{TMLE}.
+\emph{Semi-parametric}; \emph{Targeted Learning}.
 \end{abstract}
 
 
 \subsection{Introduction}\label{introduction}
+
+Religious participation is a core aspect of many cultures, and the
+question of whether attending religious services influences human
+well-being is longstanding (\citeproc{ref-koenig2012handbook}{Koenig
+\emph{et al.} 2012}; \citeproc{ref-park2005religion}{Park 2005}). Within
+religious traditions, the belief that religious practices benefit
+adherents permeates theology, moral teaching, and community life, from
+Buddhism's emphasis on meditation as a path to enlightenment and reduced
+suffering, to Christianity's view of prayer and worship as means of
+spiritual growth and divine connection, to Indigenous spiritual
+practices that are seen as maintaining harmony between people, nature,
+and the sacred. More recently, secular empirical research has linked
+religious service attendance with multiple dimensions of well-being,
+including social integration, life satisfaction, mental health, and
+meaning-making (\citeproc{ref-chen2020religious}{Chen \emph{et al.}
+2020}; \citeproc{ref-dunbar2021religiosity}{Dunbar 2021};
+\citeproc{ref-highland2022national}{Highland \emph{et al.} 2022};
+\citeproc{ref-vanderweele2022invited_church}{VanderWeele \emph{et al.}
+2022}). These studies have demonstrated that, on average, individuals
+who attend services report more favourable social and psychological
+outcomes.
+
+Although some studies have strengthened causal claims through
+appropriate causal methods (\citeproc{ref-vanderweelechurchmortality}{Li
+\emph{et al.} 2016}; \citeproc{ref-pawlikowski2019religious}{Pawlikowski
+\emph{et al.} 2019};
+\citeproc{ref-vanderweele2021effectsReligiousServiceMetanalysis}{VanderWeele
+2021}; \citeproc{ref-vanderweele2020vchenrespond}{VanderWeele and Chen
+2020}), concerns about causality persist
+(\citeproc{ref-highland2019attitudes}{Highland \emph{et al.} 2019}).
+Many investigations do not fully adjust for baseline health and baseline
+religious service, or important confounders that shape both religious
+engagement and well-being (\citeproc{ref-brown2023_church}{Brown
+\emph{et al.} 2023}; \citeproc{ref-jokela2024_church}{Jokela and
+Laakasuo 2024}). For example, Jokela and Laakasuo's analysis of four
+U.S. cohort studies (N=6,592) found that poorer health trajectories came
+before, rather than followed, religious disengagement. This suggests
+that declining religious practice might track pre-existing health
+problems rather than cause them. Similarly, global data from Iyer and
+Rosso (N=65,564) show that frequent attenders report about five
+percentage points higher life satisfaction than infrequent attenders;
+however, this association could reflect unmeasured biases or reverse
+causation. Chen and colleagues observe that well-being itself is
+multifaceted, spanning emotional, physical, social, and psychological
+domains, and that some domains -- such as meaning, purpose, and social
+connection -- may be more affected than others
+(\citeproc{ref-chen2022_church_longitudinal}{Chen \emph{et al.} 2022}).
+
+Despite these efforts, many questions remain. Existing research often
+relies on non-representative samples or predominantly religious
+environments, seldom fully addresses time-varying confounding, and
+rarely considers populations in which religious engagement is relatively
+low. Brown et al.~hypothesise that community-building itself, rather
+than specifically religious community-building, may drive any observed
+well-being benefits. Natural-experimental evidence from New Zealand
+supports this notion (\citeproc{ref-brown2023_church}{Brown \emph{et
+al.} 2023}). Following the 2010--2011 Christchurch earthquakes, those
+who maintained or lacked faith reported similar levels of subjective
+health, whereas those who lost faith showed declines in subjective
+health (\citeproc{ref-sibley2012}{Sibley and Bulbulia 2012}). These
+patterns suggest that the community context -- religious or not -- may
+be critical.
+
+In sum, there is a need for studies that move beyond cross-sectional
+correlations to address causation, address causation robustly, and
+systematically evaluate multiple dimensions of well-being
+(\citeproc{ref-vanderweele2020}{VanderWeele \emph{et al.} 2020}).
+Without such evidence, policy, clinical, and theoretical questions about
+the causal role of religious service attendance in supporting human
+flourishing remain unanswered.
+
+Here, we improve understanding by estimating the causal effects of
+regular religious service attendance on multidimensional well-being
+using data from a large, nationally diverse sample of New Zealanders
+(baseline \(N=46,377\)) enrolled in the New Zealand Attitudes and Values
+Study (NZAVS). New Zealand is characterised by high religious diversity
+and secularisation. Over half the population identifies as having no
+religion, while multiple religious traditions -- Christianity, Hinduism,
+Islam, Buddhism, and others -- coexist
+(\citeproc{ref-shaver2016religion}{Shaver \emph{et al.} 2016}). Drawing
+on an informationally rich national panel study and recent innovations
+in causal inference (\citeproc{ref-bulbulia2023}{Bulbulia 2024c};
+\citeproc{ref-hernan2024WHATIF}{Hernan and Robins 2024};
+\citeproc{ref-williams2021}{Williams and Díaz 2021}), we systematically
+examine whether a settings in which the adult population attended
+services regularly differs in its affects across multi-dimensional
+well-being from a setting in which no-one attends. We estimation these
+effects using a workflow in which non-parementric machine learning
+reduces statistical modelling assumptions. We contribute to
+understanding by estimating causal effects in a distinctly secular, and
+culturally diverse context, and obtain generalisable inferences about
+whether, and where, religious service attendance causally affects a
+well-being phenotype across dimensions of biological health,
+psychological health, person-focussed well-being, life-focussed
+well-being and social well-being.
 
 \subsection{Method}\label{method}
 
@@ -303,7 +419,9 @@ we weighted responses by New Zealand 2018 Census estimates (age, gender,
 ethnicity) to produce results that better reflect the New Zealand
 population. Information on these survey weights can be found in the
 NZAVS documentation, see:
-\href{https://doi.org/10.17605/OSF.IO/75SNB}{OSF.IO/75SNB}.
+\href{https://doi.org/10.17605/OSF.IO/75SNB}{OSF.IO/75SNB}. Refer to
+\hyperref[appendix-timeline]{Appendix A} for a histogram of daily
+responses for this cohort.
 
 \subsubsection{Target Population}\label{target-population}
 
@@ -332,6 +450,65 @@ computational burdens during estimation.
 
 \subsubsection{Outcomes}\label{outcomes}
 
+\subsubsection{Baseline Covariates}\label{baseline-covariates}
+
+We controlled for a broad range of baseline variables measured at Wave
+10 (2018--2019) to reduce confounding by demographic, personality, and
+behavioural factors (see Appendix for full measures). These included
+age, gender, ethnicity, education level, personality traits
+(Agreeableness, Conscientiousness, Extraversion, Honesty-Humility,
+Neuroticism, and Openness), household income, employment status,
+parenting status, relationship status, religious belonging, and
+health-related behaviours (e.g.~smoking, alcohol use, hours spent
+exercising). We also controlled for all outcome measures and for
+religious service attendance at baseline to minimise reverse causation
+(refer to \href{appendix-measures}{Appendix A}).
+
+\subsubsection{Exposure}\label{exposure}
+
+The primary exposure was religious service attendance. We assessed how
+often participants attended any church or place of worship during the
+study period, creating an intervention that either shifted attendance to
+at least monthly or set attendance to zero. Further details on the
+measurement and coding of this variable appear in Appendix B.
+
+\subsubsection{Outcomes}\label{outcomes-1}
+
+We categorised outcomes into five domains---health, psychological
+well-being, present-reflective outcomes, life-reflective outcomes, and
+social outcomes---based on validated scales and measures. Table 1
+summarises each domain and its associated measures. For instance, health
+outcomes included BMI and hours of sleep, whereas psychological
+well-being encompassed anxiety and depression. Outcomes were
+standardised where appropriate (i.e.~converted to z-scores) to
+facilitate comparison.
+
+\begin{longtable}[]{@{}
+  >{\raggedright\arraybackslash}p{(\linewidth - 2\tabcolsep) * \real{0.2281}}
+  >{\raggedright\arraybackslash}p{(\linewidth - 2\tabcolsep) * \real{0.7719}}@{}}
+\toprule\noalign{}
+\begin{minipage}[b]{\linewidth}\raggedright
+Domain
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Example Measures
+\end{minipage} \\
+\midrule\noalign{}
+\endhead
+\bottomrule\noalign{}
+\endlastfoot
+Health & BMI, Hours of Sleep, Hours of Exercise, SF-Health \\
+Psychological Well-Being & Anxiety, Depression, Fatigue, Rumination \\
+Present-Reflective & Body Satisfaction, Forgiveness, Self Esteem, Sexual
+Satisfaction \\
+Life-Reflective & Gratitude, Life Satisfaction, Meaning (Sense \&
+Purpose) \\
+Social & Belonging, Support, Community \\
+\end{longtable}
+
+Full variable names, labels, and scales are reported in
+\href{appendix-measures}{Appendix A}, with label mappings provided to
+clarify each outcome's definition.
+
 Data summaries for all measures used in this study are provided in
 \href{appendix-measures}{Appendix A}.
 
@@ -346,8 +523,9 @@ shift otherwise.
 \textbf{No Religious Service Attendance}: At each wave, shift religious
 service attendance to zero.
 
-We control for a rich set of confounders measured at baseline. These are
-described in XXXX. We also adjust for physical disability, employment
+We control for a rich set of confounders measured at baseline, following
+protocols describe in (\citeproc{ref-bulbulia2024causal}{Bulbulia
+\emph{et al.} 2024}). We also adjust for physical disability, employment
 status, partner status, and parenting status, as time-varying
 confounders, as these may affect both whether one attends religious
 service and one's health and well-being.
@@ -393,7 +571,7 @@ We assume conditional independence of the potential outcomes and the
 sequential treatment regimes.
 
 \[
-\big\{ Y(\tilde{a}_k)\big\} \coprod A_k \mid L_k, W
+\big\{ Y(a_k^+), Y(a_k^-)\big\} \coprod A_k \mid L_k, W
 \]
 
 To consistently estimate causal effects, we rely on three assumptions.
@@ -462,7 +640,7 @@ uses gradient boosting to optimize performance and capture complex
 interactions, balancing the model's ability to explore data complexities
 without overfitting (\citeproc{ref-polley2023}{Polley \emph{et al.}
 2023a}). The ensemble approach of \texttt{superlearner} optimally
-combines predictions from these models. Garphs, tables and output
+combines predictions from these models. Graphs, tables and output
 reports were created using the \texttt{margot} package
 (\citeproc{ref-margot2024}{Bulbulia 2024b}). For further details of the
 targeted learning using \texttt{lmtp} see
@@ -798,6 +976,93 @@ for causality.
 
 \subsection{Discussion}\label{discussion}
 
+Our findings suggest that regular religious service attendance can
+modestly enhance meaning, gratitude, and sexual satisfaction. Yet, our
+analysis also underscores the challenges of making strong causal claims
+in observational settings. The absence of consistent or robust evidence
+for many hypothesised effects does not mean that such effects do not
+exist. Uncertainty arises not only from possible residual confounding,
+but also from the likelihood that non-directed measurement error biases
+effects toward the null. In other words, failures to detect a
+relationship might owe to limitations in our measures rather than to a
+genuine absence of effect.
+
+A further caveat is that causal effect estimates reflect a hypothetical
+scenario in which the entire target population either consistently
+attends services or never attends. This population-level contrast
+represents an average treatment effect; we have not examined how the
+causal effects of religious service attendance vary by faith tradition,
+intensity of belief, or cultural context. Such studies involve changing
+the target population from everyone to members of specific population
+strata or group. Moroever, at an individual level, different people will
+respond differently to religious behaviours, and we assume that people
+often know themselves best. Our findings project an average treatment
+effect of the adult population of New Zealand, which should not be
+confused with life advice.
+
+One of our most robust findings is that religious engagement increases a
+sense of meaning and especially of purpose. The the explanation for this
+result remain speculative. Evolutionary accounts might question why, if
+meaning and purpose are biologically desirable, they are not universal
+`default' states of consciousness. Why would the time and material
+investments of religious service attendance require our attention? Some
+scholars suggest that religious healing might function as a hard-to-fake
+signal that validates religious commitments, rather than as an
+evolutionary end in itself (\citeproc{ref-bulbulia2006nature}{Bulbulia
+2006}). Any evolutionary or functional explanations for why religious
+practice boosts meaning presently remains speculative, and must reckon
+with the complex cultural and biological processes that have given rise
+to and conserved the religions of our day.
+
+Closely related to meaning is the finding that religious engagement
+fosters gratitude. In classical Christian thought dating at least to
+Aquinas, religion is framed as a virtue of justice called `piety', which
+entails rightly acknowledging the sources of one's existence and
+sustenance as a debt that cannot be repaid
+(\citeproc{ref-bulbulia2023understanding}{Bulbulia 2023}). In a modern
+idiom, one might refer to this virtue a `gratitude'. Indeed, the
+rehearsal of gratitude is a prominent feature not only of Christian
+religious service but of most religious traditions
+(\citeproc{ref-bono2004gratitude}{Bono \emph{et al.} 2004};
+\citeproc{ref-mccullough2001gratitude}{McCullough \emph{et al.} 2001}).
+It has been hypothesised that active attention to gratitude in religious
+faith serves to foster prosociality, which, if confirmed, would help to
+explain the durability of this result to robust causal estimation
+workflows that controls for confounding.
+
+The positive causal association we observe between religious attendance
+and sexual satisfaction also raises intriguing questions. Prior research
+has documented associations between religiosity and marital sexual
+satisfaction (\citeproc{ref-dew2020joint}{Dew \emph{et al.} 2020}),
+although these studies rely on cross-sectional data and cannot reliably
+infer causation. In line with that correlational literature, however, we
+find that religious service attendance causes modest improvements in
+sexual satisfaction, effects that remain after controlling for baseline
+values of both indicators. One possible explanation is that religious
+activities help align values, enhance communication, and foster stable
+social support networks within couples, thereby strengthening intimacy.
+Such intimacy is especially valuable for parenting---described as the
+ultimate cooperation problem because it involves demanding commitments
+that link biological fates
+(\citeproc{ref-bulbulia2015}{\textbf{bulbulia2015?}}). Yet there may be
+non-social mechanisms at work as well, and in general, the intersection
+of sex and religion remains under-examined (though see
+\citeproc{ref-shaver2020church}{Shaver \emph{et al.} 2020},
+\citeproc{ref-shaver2024religious}{2024};
+\citeproc{ref-shaver2022integrating}{Shaver and White 2022}).
+
+In conclusion, our results indicate that religious service attendance
+can enhance certain facets of well-being, particularly meaning and
+purpose, gratitude, and sexual satisfaction. These findings hold even in
+a secular-majority country. However, we find little evidence of broad
+effects on other well-being outcomes. Future research should focus on
+fine-grained analyses of heterogeneity in these effects, explore
+mechanistic pathways that explain how religius service affects
+well-being, and remain mindful that individual experience often resists
+sweeping generalisations, whether religious or otherwise, and that such
+benefits, or the absence of such benefits, will not hold for everyone
+equally.
+
 \subsubsection{Ethics}\label{ethics}
 
 The University of Auckland Human Participants Ethics Committee reviews
@@ -835,18 +1100,33 @@ into the manuscript.}
 
 \newpage{}
 
-\subsection{Appendix A: Sample Demographic Statistics and Confouding
-Control}\label{appendix-measures}
+\subsection{Appendix A: Daily Data Collection}\label{appendix-timeline}
 
 \newpage{}
 
-\subsection{Appendix B: Sample Demographic Statistics and Confouding
-Control}\label{appendix-baseline}
+\subsection{New Zealand Attitudes and Values Study Data Collection (2018
+retained cohort)}\label{appendix-daily}
 
-Table~\ref{tbl-baseline} presents sample statics information. All
-indicators in this table, as well as indicators for the baseline
-measurement of the Monthly Religious Service and all outcome variables,
-were included for confounding control.
+\begin{figure}
+
+\centering{
+
+\pandocbounded{\includegraphics[keepaspectratio]{24-church-wb-long_files/figure-pdf/fig-timeline-1.pdf}}
+
+}
+
+\caption{\label{fig-timeline}Historgram of New Zealand Attitudes and
+Values Study Daily Data Collection: Time 11 - Time 15.}
+
+\end{figure}%
+
+\newpage{}
+
+\subsection{Appendix B: Measures and Demographic
+Statistics}\label{appendix-baseline}
+
+\subsubsection{Sample Demographic
+Statistics}\label{sample-demographic-statistics}
 
 \begingroup\fontsize{6}{8}\selectfont
 \begingroup\fontsize{6}{8}\selectfont
@@ -1077,40 +1357,7 @@ Attitudes and Values Cohort waves 2018.}
 \endgroup{}
 \endgroup{}
 
-For confounding control, we employ a modified disjunctive cause
-criterion (\citeproc{ref-vanderweele2019}{VanderWeele 2019}), which
-involves:
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\tightlist
-\item
-  Identifying all common causes of both the treatment and outcomes.
-\item
-  Excluding instrumental variables that affect the exposure but not the
-  outcome.
-\item
-  Including proxies for unmeasured confounders affecting both exposure
-  and outcome.
-\item
-  Controlling for baseline exposure and baseline outcome, serving as
-  proxies for unmeasured common causes
-  (\citeproc{ref-vanderweele2020}{VanderWeele \emph{et al.} 2020}).
-\end{enumerate}
-
-The covariates included for confounding control are detailed in
-(\citeproc{ref-table-exposure}{\textbf{table-exposure?}}). This list
-adheres to the guidelines provided in
-(\citeproc{ref-bulbulia2024PRACTICAL}{Bulbulia 2024a}) and were
-pre-specified in our study protocol \url{https://osf.io/ce4t9/}.
-
-Where there are multiple exposures, causal inference may be threatened
-by time-varying confounding
-(\citeproc{ref-bulbulia_2024_swig_time}{\textbf{bulbulia\_2024\_swig\_time?}}).
-
-\newpage{}
-
-\subsection{Appendix B: Exposure Variable}\label{appendix-exposure}
+\subsubsection{Exposure Variable}\label{appendix-exposure}
 
 \begingroup\fontsize{12}{14}\selectfont
 \begingroup\fontsize{8}{10}\selectfont
@@ -1156,9 +1403,9 @@ Zealand Attitudes and Values Cohort waves 2018.}
 
 \newpage{}
 
-\subsubsection{C Baseline Outcome Variables}\label{appendix-outcomes}
+\subsubsection{Baseline and Outcome Variables}\label{appendix-outcomes}
 
-\paragraph{Health}\label{health-1}
+\subsubsection{Health Outcomes}\label{health-outcomes}
 
 \begingroup\fontsize{12}{14}\selectfont
 \begingroup\fontsize{8}{10}\selectfont
@@ -1210,27 +1457,56 @@ New Zealand Attitudes and Values Cohort waves 2018.}
 \endgroup{}
 \endgroup{}
 
-\newpage{}
+\subsection{Appendix C: Confouding
+Control}\label{appendix-c-confouding-control}
 
-\subsection{D New Zealand Attitudes and Values Study Data Collection
-(2018 retained cohort)}\label{appendix-daily}
+\begin{table}
 
-\begin{figure}
+\caption{\label{tbl-02}Causal diagrams showing sources of bias in a
+three wave panel study.}
 
 \centering{
 
-\pandocbounded{\includegraphics[keepaspectratio]{24-church-wb-long_files/figure-pdf/fig-timeline-1.pdf}}
+\threewavepaneltwo
 
 }
 
-\caption{\label{fig-timeline}Historgram of New Zealand Attitudes and
-Values Study Daily Data Collection: Time 11 - Time 15.}
+\end{table}%
 
-\end{figure}%
+For confounding control, we employ a modified disjunctive cause
+criterion (\citeproc{ref-vanderweele2019}{VanderWeele 2019}), which
+involves:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  Identifying all common causes of both the treatment and outcomes.
+\item
+  Excluding instrumental variables that affect the exposure but not the
+  outcome.
+\item
+  Including proxies for unmeasured confounders affecting both exposure
+  and outcome.
+\item
+  Controlling for baseline exposure and baseline outcome, serving as
+  proxies for unmeasured common causes
+  (\citeproc{ref-vanderweele2020}{VanderWeele \emph{et al.} 2020}).
+\end{enumerate}
+
+The covariates included for confounding control are detailed in
+(\citeproc{ref-table-exposure}{\textbf{table-exposure?}}). This list
+adheres to the guidelines provided in
+(\citeproc{ref-bulbulia2024PRACTICAL}{Bulbulia 2024a}) and were
+pre-specified in our study protocol \url{https://osf.io/ce4t9/}.
+
+Where there are multiple exposures, causal inference may be threatened
+by time-varying confounding
+(\citeproc{ref-bulbulia_2024_swig_time}{\textbf{bulbulia\_2024\_swig\_time?}}).
 
 \newpage{}
 
-\subsection{Appendix E Transition Matrix to Verify Positivity
+\subsection{Appendix D Transition Matrix to Verify Positivity
 Assumption}\label{appendix-transition}
 
 \begin{longtable}[]{@{}cccccc@{}}
@@ -1268,6 +1544,27 @@ suggest more frequent shifts from the baseline state to other states.
 
 \phantomsection\label{refs}
 \begin{CSLReferences}{1}{0}
+\bibitem[\citeproctext]{ref-bono2004gratitude}
+Bono, G, Emmons, RA, and McCullough, ME (2004) Gratitude in practice and
+the practice of gratitude. \emph{Positive Psychology in Practice},
+464--481.
+
+\bibitem[\citeproctext]{ref-brown2023_church}
+Brown, JE, Van Mulukom, V, Charles, SJ, and Farias, M (2023) Do you need
+religion to enjoy the benefits of church services? Social bonding,
+morality and quality of life among religious and secular congregations.
+\emph{Psychology of Religion and Spirituality}, \textbf{15}(2), 308.
+
+\bibitem[\citeproctext]{ref-bulbulia2006nature}
+Bulbulia, J (2006) Nature's medicine: Religiosity as an adaptation for
+health and cooperation. \emph{Where God and Science Meet}, \textbf{1},
+87--121.
+
+\bibitem[\citeproctext]{ref-bulbulia2023understanding}
+Bulbulia, JA (2023) Understanding the relationship between science and
+religion using bayes' theorem. \emph{Studies in Christian Ethics},
+\textbf{36}(4), 866--878.
+
 \bibitem[\citeproctext]{ref-bulbulia2024PRACTICAL}
 Bulbulia, JA (2024a) A practical guide to causal inference in three-wave
 panel studies. \emph{PsyArXiv Preprints}.
@@ -1283,10 +1580,33 @@ Bulbulia, JA (2024c) Methods in causal inference part 1: Causal diagrams
 and confounding. \emph{Evolutionary Human Sciences}, \textbf{6}, e40.
 doi:\href{https://doi.org/10.1017/ehs.2024.35}{10.1017/ehs.2024.35}.
 
+\bibitem[\citeproctext]{ref-bulbulia2024causal}
+Bulbulia, JA, Davis, DE, Rice, KG, Sibley, CG, and Troughton, G (2024)
+The causal effects of religious service attendance on prosocial
+behaviours in {New Zealand}: {A} national longitudinal study.
+\emph{Archive for the Psychology of Religion}, \textbf{46}(3), 244--267.
+doi:\href{https://doi.org/10.1177/00846724241302810}{10.1177/00846724241302810}.
+
 \bibitem[\citeproctext]{ref-xgboost2023}
 Chen, T, He, T, Benesty, M, \ldots{} Yuan, J (2023) \emph{Xgboost:
 Extreme gradient boosting}. Retrieved from
 \url{https://CRAN.R-project.org/package=xgboost}
+
+\bibitem[\citeproctext]{ref-chen2020religious}
+Chen, Y, Kim, ES, and VanderWeele, TJ (2020) Religious-service
+attendance and subsequent health and well-being throughout adulthood:
+Evidence from three prospective cohorts. \emph{International Journal of
+Epidemiology}, \textbf{49}(6), 2030--2040.
+
+\bibitem[\citeproctext]{ref-chen2022_church_longitudinal}
+Chen, Y, Weziak-Bialowolska, D, Lee, MT, Bialowolski, P, McNeely, E, and
+VanderWeele, TJ (2022) Longitudinal associations between domains of
+flourishing. \emph{Scientific Reports}, \textbf{12}(1), 2740.
+
+\bibitem[\citeproctext]{ref-dew2020joint}
+Dew, JP, Uecker, JE, and Willoughby, BJ (2020) Joint religiosity and
+married couples' sexual satisfaction. \emph{Psychology of Religion and
+Spirituality}, \textbf{12}(2), 201.
 
 \bibitem[\citeproctext]{ref-duxedaz2021}
 Díaz, I, Williams, N, Hoffman, KL, and Schenck, EJ (2021) Non-parametric
@@ -1301,10 +1621,27 @@ causal effects based on longitudinal modified treatment policies.
 \textbf{118}(542), 846--857.
 doi:\href{https://doi.org/10.1080/01621459.2021.1955691}{10.1080/01621459.2021.1955691}.
 
+\bibitem[\citeproctext]{ref-dunbar2021religiosity}
+Dunbar, RI (2021) Religiosity and religious attendance as factors in
+wellbeing and social engagement. \emph{Religion, Brain \& Behavior},
+\textbf{11}(1), 17--26.
+
 \bibitem[\citeproctext]{ref-hernan2024WHATIF}
 Hernan, MA, and Robins, JM (2024) \emph{Causal inference: What if?},
 Taylor \& Francis. Retrieved from
 \url{https://www.hsph.harvard.edu/miguel-hernan/causal-inference-book/}
+
+\bibitem[\citeproctext]{ref-highland2019attitudes}
+Highland, BR, Troughton, G, Shaver, J, Barrett, JL, Sibley, CG, and
+Bulbulia, J (2019) Attitudes to religion predict warmth for muslims in
+new zealand. \emph{New Zealand Journal of Psychology (Online)},
+\textbf{48}(1), 122--132.
+
+\bibitem[\citeproctext]{ref-highland2022national}
+Highland, B, Worthington, EL, Davis, DE, Sibley, CG, and Bulbulia, JA
+(2022) National longitudinal evidence for growth in subjective
+well-being from spiritual beliefs. \emph{Journal of Health Psychology},
+\textbf{27}(7), 1738--1752.
 
 \bibitem[\citeproctext]{ref-hoffman2023}
 Hoffman, KL, Salazar-Barreto, D, Rudolph, KE, and Díaz, I (2023)
@@ -1319,11 +1656,42 @@ association of corticosteroids with COVID-19 mortality. \emph{JAMA
 Network Open}, \textbf{5}(10), e2234425.
 doi:\href{https://doi.org/10.1001/jamanetworkopen.2022.34425}{10.1001/jamanetworkopen.2022.34425}.
 
+\bibitem[\citeproctext]{ref-jokela2024_church}
+Jokela, M, and Laakasuo, M (2024) Health trajectories of individuals who
+quit active religious attendance: Analysis of four prospective cohort
+studies in the united states. \emph{Social Psychiatry and Psychiatric
+Epidemiology}, \textbf{59}(5), 871--878.
+
+\bibitem[\citeproctext]{ref-koenig2012handbook}
+Koenig, HG, King, D, and Carson, VB (2012) \emph{Handbook of religion
+and health}, Oxford University Press.
+
+\bibitem[\citeproctext]{ref-vanderweelechurchmortality}
+Li, S, Stampfer, MJ, Williams, DR, and VanderWeele, TJ (2016)
+{Association of Religious Service Attendance With Mortality Among
+Women}. \emph{JAMA Internal Medicine}, \textbf{176}(6), 777--785.
+doi:\href{https://doi.org/10.1001/jamainternmed.2016.1615}{10.1001/jamainternmed.2016.1615}.
+
 \bibitem[\citeproctext]{ref-linden2020EVALUE}
 Linden, A, Mathur, MB, and VanderWeele, TJ (2020) Conducting sensitivity
 analysis for unmeasured confounding in observational studies using
 e-values: The evalue package. \emph{The Stata Journal}, \textbf{20}(1),
 162--175.
+
+\bibitem[\citeproctext]{ref-mccullough2001gratitude}
+McCullough, ME, Kilpatrick, SD, Emmons, RA, and Larson, DB (2001) Is
+gratitude a moral affect? \emph{Psychological Bulletin},
+\textbf{127}(2), 249.
+
+\bibitem[\citeproctext]{ref-park2005religion}
+Park, CL (2005) Religion as a meaning-making framework in coping with
+life stress. \emph{Journal of Social Issues}, \textbf{61}(4), 707--729.
+
+\bibitem[\citeproctext]{ref-pawlikowski2019religious}
+Pawlikowski, J, Białowolski, P, Węziak-Białowolska, D, and VanderWeele,
+TJ (2019) Religious service attendance, health behaviors and
+well-being---an outcome-wide longitudinal analysis. \emph{European
+Journal of Public Health}, \textbf{29}(6), 1177--1183.
 
 \bibitem[\citeproctext]{ref-polley2023}
 Polley, E, LeDell, E, Kennedy, C, and Laan, M van der (2023a)
@@ -1335,6 +1703,33 @@ Polley, E, LeDell, E, Kennedy, C, and van der Laan, M (2023b)
 \emph{SuperLearner: Super learner prediction}. Retrieved from
 \url{https://github.com/ecpolley/SuperLearner}
 
+\bibitem[\citeproctext]{ref-shaver2024religious}
+Shaver, JH, Chvaja, R, Spake, L, \ldots{} Sosis, R (2024) Religious
+involvement is associated with higher fertility and lower maternal
+investment, but more alloparental support among gambian mothers.
+\emph{American Journal of Human Biology}, e24144.
+
+\bibitem[\citeproctext]{ref-shaver2020church}
+Shaver, JH, Power, EA, Purzycki, BG, \ldots{} Bulbulia, JA (2020) Church
+attendance and alloparenting: An analysis of fertility, social support
+and child development among {E}nglish mothers. \emph{Philosophical
+Transactions of the Royal Society B}, \textbf{375}(1805), 20190428.
+
+\bibitem[\citeproctext]{ref-shaver2016religion}
+Shaver, JH, Troughton, G, Sibley, CG, and Bulbulia, JA (2016) Religion
+and the unmaking of prejudice toward muslims: Evidence from a large
+national sample. \emph{PloS One}, \textbf{11}(3), e0150209.
+
+\bibitem[\citeproctext]{ref-shaver2022integrating}
+Shaver, J, and White, T (2022) Integrating pacific research
+methodologies with western social science research methods: Quantifying
+pentecostalism's effects on fijian relationality.
+
+\bibitem[\citeproctext]{ref-sibley2012}
+Sibley, C. G., and Bulbulia, JA (2012) Healing those who need healing:
+How religious practice affects social belonging. \emph{Journal for the
+Cognitive Science of Religion}, \textbf{1}, 29--45.
+
 \bibitem[\citeproctext]{ref-sibley2021}
 Sibley, CG (2021)
 \emph{\href{https://doi.org/10.31234/osf.io/wgqvy}{Sampling procedure
@@ -1344,6 +1739,23 @@ and sample details for the {N}ew {Z}ealand {A}ttitudes and {V}alues
 \bibitem[\citeproctext]{ref-vanderweele2019}
 VanderWeele, TJ (2019) Principles of confounder selection.
 \emph{European Journal of Epidemiology}, \textbf{34}(3), 211--219.
+
+\bibitem[\citeproctext]{ref-vanderweele2021effectsReligiousServiceMetanalysis}
+VanderWeele, TJ (2021) Effects of religious service attendance and
+religious importance on depression: Examining the meta-analytic
+evidence. \emph{The International Journal for the Psychology of
+Religion}, \textbf{31}(1), 21--26.
+
+\bibitem[\citeproctext]{ref-vanderweele2022invited_church}
+VanderWeele, TJ, Balboni, TA, and Koh, HK (2022) Invited commentary:
+Religious service attendance and implications for clinical care,
+community participation, and public health. \emph{American Journal of
+Epidemiology}, \textbf{191}(1), 31--35.
+
+\bibitem[\citeproctext]{ref-vanderweele2020vchenrespond}
+VanderWeele, TJ, and Chen, Y (2020) VanderWeele and chen respond to
+{``religion as a social determinant of health.''} \emph{American Journal
+of Epidemiology}, \textbf{189}(12), 1464--1466.
 
 \bibitem[\citeproctext]{ref-vanderweele2017}
 VanderWeele, TJ, and Ding, P (2017) Sensitivity analysis in
